[CIT-6] feature: Rechechre-multi-critere-ferme